# regulation_evolution

./: .gitignore  CMakeLists.txt  README.md  environment.yml  run_script.py  test.py
data/: cell_evolution.par  cell_evolution.par.old  colortable.ctb
data/competition/: 16_blobs_food.csv  8_blobs_food.csv
data/palettes/: chemgrad64.spalette
scripts/: KL_adhesion_module.py  __init__.py  allsimdir_networkanalysis.sh  analyse_lastpop.pipeline  basicrunscript.sh  basicrunscript_local.py  cat_datafiles.py  cell_switching.py  compare_2_networks_hier.py  compare_phenotypematrices.py  count_2_networks_dist.py  jvals_2_kl_optim_varl_takesvals_hj1m_j11.py  lattice_partitions.py  make_colortable.py  make_movies.sh  make_timeplots.sh  min_max_concentration.py  moviescript.sh  moviescript2.sh  network_analysis.sh  network_analysis_new.sh  network_distance.sh  parse_networks.py  plot_all_division_times.py  plot_av_division_time.py  plot_division_time.py  plot_division_time_gatherseasons.py  plot_divtimechange_allsims.py  plot_genphendist_scatter.py  plot_median_gamma.py  plot_netanalysis.py  plot_netanalysis_jan.py  plot_networkpars.py  plot_networkpars2.py  plot_networkpars2_new.py  plot_networks.py  plot_peaksdata.py  plot_random_bitstrings.py  print_network_hier.py  reducesizescript.sh  (+4 more)
scripts/analyses/: construct_dist_matrix.py  fileio.py  make_competition.py  make_netgraphs.py  make_trees.py  parse.py  plot_adhesion.py  plot_deaths.py  plot_netgraph.py  plot_netgraphs.py  plot_timeline.py  plot_tree.py
scripts/colortable/: __init__.py  make_colortable.py  print_colortable.py
scripts/colortable/palettes/: categ8.spalette  chemgrad64_2.spalette  chemgrad64_3.spalette  divgrad8.spalette  miggrad8.spalette
scripts/competition/: make_competition.py  make_files.py  make_templates.py  parse.py
scripts/genome/: plot_genome.py  plot_genomes.py  scan_genome.cpp  sweep_genome.cpp  sweep_genomes.cpp
scripts/network/: __main__.py  construct_dist_matrix.py  make_netgraphs.py  make_trees.py  parse.py  parse_ancestry.py  parse_neighbours.py  parse_networks.py  plot_adhesion.py  plot_netgraph.py  plot_survivors.py  plot_tree.py
scripts/networkplotting/data/: consensusdata.txt  t0005640000_c0007.txt  t0005640000_c0020.txt  t0005640000_c0028.txt  t0005640000_c0030.txt  t0005640000_c0075.txt  t0005640000_c0087.txt  t0005640000_c0093.txt  t0005640000_c0103.txt  t0005640000_c0118.txt  t0005640000_c0137.txt  t0005640000_c0155.txt  t0005640000_c0182.txt  t0005640000_c0337.txt  t0005640000_c0408.txt  t0005640000_c0416.txt  t0005640000_c0429.txt  t0005640000_c0456.txt  t0005640000_c0503.txt  t0005640000_c0572.txt  t0005640000_c0596.txt  written.dot
scripts/networkplotting/scripts/: copy_files.py  network_analysis_new.sh  onesimdir_networkanalysis.sh  plot_netanalysis_jan.py
scripts/networkplotting/simulate_genome/: designnet.txt  genome.cpp  header.hh  random.cpp  random.h  testnet.txt  testnet2.txt  world.cc  written.dot
src/: CellularPotts2.pro  Makefile  TODO.txt  boundingbox.cpp  boundingbox.h  ca.cpp  ca.h  cell.cpp  cell.h  cell_evolution.cpp  conrec.cpp  conrec.h  crash.cpp  crash.h  dish.cpp  dish.h  engulfment.cpp  foodpatch.cpp  foodpatch.h  gene.cpp  gene.h  genome.cpp  genome.h  graph.h  hull.cpp  hull.h  info.cpp  info.h  intplane.cpp  intplane.h  misc.cpp  misc.h  moc_qtgraph.cpp  neighbourcode.cpp  output.cpp  output.h  parameter.cpp  parameter.h  parse.cpp  parse.h  (+17 more)
